# sp1-verifier

./: .env.example  .gitmodules  Cargo.toml  README.md  queryconverted.txt  queryconverter.py  raw.json
contracts/: foundry.toml
contracts/src/: EthereumZekoBridge.sol  PoseidonMina.sol  ZekoAddress.sol  ZekoProofVerifier.sol  ZekoSettlement.sol
contracts/src/fixtures/: groth16-fixture.json  plonk-fixture.json  sui-groth16-fixture.json
contracts/test/: EthereumZekoBridge.t.sol  PoseidonMina.t.sol  ZekoProofVerifierGroth16.t.sol  ZekoSettlementGroth16.t.sol
docs/: _config.yml  index.md
lib/: Cargo.toml
lib/src/: fp.rs  lib.rs  main.rs  params.rs  poseidon.rs
patches/ledger/: Cargo.toml  README.md
patches/ledger/benches/: database.rs
patches/ledger/src/: base.rs  cache.rs  hash.rs  lib.rs  transaction_pool.rs  tree.rs  tree_version.rs
patches/ledger/src/account/: account.rs  common.rs  conv.rs  legacy.rs
patches/ledger/src/address/: mod.rs  raw.rs
patches/ledger/src/database/: database.rs  database_impl.rs
patches/ledger/src/dummy/: for_tests.rs  mod.rs
patches/ledger/src/generators/: mod.rs  user_command.rs  zkapp_command.rs  zkapp_command_builder.rs
patches/ledger/src/mask/: mask.rs  mask_impl.rs
patches/ledger/src/ondisk/: compression.rs  database.rs  lock.rs
patches/ledger/src/proofs/: accumulator_check.rs  block.rs  caching.rs  circuit_blobs.rs  constants.rs  conv.rs  field.rs  group_map.rs  merge.rs  mod.rs  prover.rs  provers.rs  step.rs  to_field_elements.rs  transaction.rs  transition_chain.rs  unfinalized.rs  urs_utils.rs  util.rs  verification.rs  verifiers.rs  wrap.rs  zkapp.rs
patches/ledger/src/proofs/data/: devnet_blockchain_verifier_index.json  devnet_transaction_verifier_index.json  mainnet_blockchain_verifier_index.json  mainnet_transaction_verifier_index.json
patches/ledger/src/proofs/numbers/: common.rs  currency.rs  nat.rs
patches/ledger/src/proofs/public_input/: messages.rs  plonk_checks.rs  prepared_statement.rs  protocol_state.rs  scalar_challenge.rs  scalars.rs
patches/ledger/src/scan_state/: conv.rs  currency.rs  fee_excess.rs  parallel_scan.rs  pending_coinbase.rs  protocol_state.rs  scan_state.rs  snark_work.rs
patches/ledger/src/scan_state/transaction_logic/: for_tests.rs  local_state.rs  mod.rs  protocol_state.rs  signed_command.rs  transaction_applied.rs  transaction_partially_applied.rs  transaction_union_payload.rs  transaction_witness.rs  valid.rs  verifiable.rs  zkapp_statement.rs
patches/ledger/src/scan_state/transaction_logic/zkapp_command/: from_applied_sequence.rs  from_unapplied_sequence.rs  mod.rs  valid.rs  verifiable.rs  zkapp_weight.rs
patches/ledger/src/sparse_ledger/: mod.rs  sparse_ledger.rs  sparse_ledger_impl.rs
patches/ledger/src/staged_ledger/: diff.rs  diff_creation_log.rs  hash.rs  mod.rs  pre_diff_info.rs  resources.rs  staged_ledger.rs  transaction_validator.rs  validate_block.rs
patches/ledger/src/util/: mod.rs
patches/ledger/src/verifier/: common.rs  mod.rs
patches/ledger/src/zkapps/: checks.rs  interfaces.rs  mod.rs  non_snark.rs  snark.rs  zkapp_logic.rs
patches/ledger/tests/: test_transaction_logic.rs  test_transaction_logic_first_pass.rs  test_transaction_logic_first_pass_coinbase.rs  test_transaction_logic_first_pass_delegation.rs  test_transaction_logic_first_pass_fee_transfer.rs  test_transaction_logic_first_pass_zkapp.rs  test_zkapp.rs
patches/mina-core/: Cargo.toml
patches/mina-core/src/: chain_id.rs  consensus.rs  constants.rs  distributed_pool.rs  encrypted_key.rs  lib.rs  log.rs  network.rs  substate.rs
patches/mina-core/src/block/: block_with_hash.rs  genesis.rs  mod.rs  prevalidate.rs
patches/mina-core/src/requests/: request_id.rs
patches/mina-core/src/snark/: snark.rs  snark_info.rs  snark_job_commitment.rs  snark_job_id.rs
patches/mina-core/src/transaction/: transaction_info.rs
patches/mina-p2p-messages/: Cargo.toml  README.md
patches/mina-p2p-messages/p2p-messages/: Cargo.toml  default-v2.toml  default.toml
patches/mina-p2p-messages/p2p-messages/examples/: mina-types-converter.rs
patches/mina-p2p-messages/p2p-messages/src/: array.rs  b58.rs  bigint.rs  gossip.rs  hash.rs  rpc.rs  string.rs
patches/mina-p2p-messages/p2p-messages/src/v2/: generated.rs  manual.rs
patches/mina-p2p-messages/p2p-messages/tests/: decode_bench.rs  rpc-read.rs
patches/mina-p2p-messages/src/: bigint.rs  core.rs  hash_input.rs  keys.rs  string.rs
patches/mina-p2p-messages/src/v2/: hashing.rs
patches/mina-p2p-messages/src/v2/dummy/: mod.rs
patches/mina-p2p-messages/tests/: decode_alloc.rs
patches/mina-vrf/: Cargo.toml  README.md
patches/mina-vrf/src/: lib.rs  message.rs  output.rs  serialize.rs  threshold.rs
patches/redux/: Cargo.toml
patches/redux/src/: callback.rs
patches/substrate-bn/: .cargo_vcs_info.json  .travis.yml  Cargo.toml  Cargo.toml.orig
patches/substrate-bn/src/: arith.rs  lib.rs
patches/substrate-bn/src/fields/: fp.rs  fq12.rs  fq2.rs  fq6.rs  mod.rs
patches/substrate-bn/src/groups/: mod.rs
program/: Cargo.toml
program/bridge/: Cargo.toml
program/bridge/src/: main.rs
program/settlement/: Cargo.toml
program/src/: main.rs
program/withdraw/: Cargo.toml
program/withdraw/src/: main.rs
proofs/: bridge-input-200.json  graphql.txt  vk.txt  withdraw-input-200.json  withdraw-input.json
script/: Cargo.toml  build.rs
script/src/: parser.rs
sui-contracts/: .coverage_map.mvcov  .trace  Move.toml
sui-contracts/sources/: poseidon_registry.move  verifier.move
sui-contracts/tests/: verifier_tests.move
tools/generate-srs/: Cargo.toml
tools/generate-srs/src/: main.rs
