[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
ark-ff = { version = "0.5.0", features = ["std"] }
alloy-sol-types    = "1.0"
anyhow = "1.0.81"
base64 = "0.22"
bincode = "1.3.3"
hex = "0.4.3"
juniper = "0.17"
serde              = { version = "1", features = ["derive", "rc"] }
mina-p2p-messages  = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1", default-features = false  }
mina-core          = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1", default-features = false }
mina-curves = { git = "https://github.com/o1-labs/proof-systems", tag = "0.3.0" }
mina-node-native          = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1" }
ledger             = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1", package = "mina-tree", default-features = false  }
rsexp = "0.2.3"
serde_json = "1.0.107"

# Redirect all mina-rust references (including transitive deps that still point
# to the o1-labs upstream) to your zeko-labs fork on branch sp1.
[patch."https://github.com/o1-labs/mina-rust"]
mina-p2p-messages = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1" }
mina-core         = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1" }
ledger            = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1", package = "mina-tree" }
mina-node-native  = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1" }