[workspace]
members = [
    "lib",
    "program",
    "script",
    "tools/generate-srs"
]
resolver = "2"

[workspace.dependencies]
# ark
ark-ff          = { version = "0.5.0", features = ["std"] }
ark-serialize   = { version = "0.5.0", features = ["std"] }
ark-poly        = { version = "0.5.0", features = ["std"] }

# proof-systems — zeko fork, branch sp1
kimchi          = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-curves     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-hasher     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-poseidon   = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-signer     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
o1-utils        = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
poly-commitment = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }

# mina-rust — zeko fork, branch sp1-msm
mina-p2p-messages = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1-msm", default-features = false }
mina-core         = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1-msm", default-features = false }
mina-node-native  = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1-msm" }
ledger            = { git = "https://github.com/zeko-labs/mina-rust", branch = "sp1-msm", package = "mina-tree", default-features = false }

# misc
alloy-sol-types = "1.0"
anyhow          = "1.0.81"
base64          = "0.22"
bincode         = "1.3.3"
bytemuck        = "1"
hex             = "0.4.3"
juniper         = "0.17"
rkyv            = { version = "0.8", features = ["alloc"] }
rsexp           = "0.2.3"
serde           = { version = "1", features = ["derive", "rc"] }
serde_json      = "1.0.107"

[patch."https://github.com/o1-labs/proof-systems"]
kimchi          = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-curves     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-hasher     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-poseidon   = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
mina-signer     = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
o1-utils        = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }
poly-commitment = { git = "https://github.com/zeko-labs/proof-systems", branch = "sp1-msm" }

[patch.crates-io]
core2 = { git = "https://github.com/bbqsrc/core2", rev = "545e84bcb0f235b12e21351e0c69767958efe2a7" }