[package]
name = "fibonacci-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = { version = "0.5", default-features = false, features = ["extra-sizes"] }
bytemuck = "1"
mina-curves.workspace = true
mina-poseidon.workspace =true

[dev-dependencies]
num-bigint = "0.4"

[features]
debug-log =["mina-poseidon/debug-log"]


# SP1 patch: U256::mul_mod → syscall_uint256_mulmod in zkVM
[patch.crates-io]
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-6.0.0" }

[target.'cfg(target_os = "zkvm")'.dependencies]
sp1-lib = "6.0.2"

