[package]
version = "0.1.0"
name = "zkapp-program"
edition = "2021"

[dependencies]
sp1-zkvm          = "6.0.2"

ark-serialize     = { workspace = true }
ledger            = { workspace = true, default-features = false }
mina-core         = { workspace = true, default-features = false }
mina-curves       = { workspace = true }
mina-p2p-messages = { workspace = true, default-features = false }
ark-ff            = { workspace = true }
serde             = { workspace = true }
zeko_sp1_lib      = { path = "../lib" }
kimchi            = { workspace = true }
mina-poseidon     = { workspace = true }
poly-commitment   = { workspace = true }
bincode = { workspace = true }
rkyv = { workspace = true }

[profile.release]
lto            = "thin"
codegen-units  = 1
opt-level      = 3

[target.'cfg(target_os = "zkvm")'.dependencies]
sp1-lib  = "6.0.2"
bytemuck = "1"