[package]
name = "mina-tree"
version = "0.19.0"
edition = "2021"
license = "Apache-2.0"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[dependencies]
anyhow        = "1.0.81"
ark-ec        = { version = "0.5.0" }
ark-ff        = { version = "0.5.0", features = ["parallel", "asm", "std"] }
ark-poly      = { version = "0.5.0" }
ark-serialize = { version = "0.5.0", features = ["std"] }
backtrace     = "0.3"
base64        = "0.22"
bitvec        = "1.0.1"
blake2        = "0.10"
bs58          = "0.4.0"
crc32fast     = "1"
derive_more   = "0.99.17"
fraction      = { version = "=0.15.1", default-features = false, features = ["with-serde-support"] }
hex           = "0.4.3"
itertools     = "0.12"
juniper       = "0.16"
kimchi        = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
lazy_static   = "1.4.0"
libc          = "0.2.151"
mina-core     = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-curves   = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-hasher   = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-macros   = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-p2p-messages = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-poseidon = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-signer   = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
num-bigint = "0.4"
o1-utils      = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
once_cell     = "1"
poly-commitment = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
poseidon      = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
postcard      = { version = "1.0.9", features = ["use-std"] }
rand          = { version = "0.8", features = ["small_rng"] }
rayon         = "1.5"
redux         = { path = "../redux" }
serde         = { version = "1", features = ["derive", "rc"] }
serde_json    = { version = "1.0.107", features = ["float_roundtrip"] }
serde_with    = { version = "3.7.0", features = ["hex"] }
sha2          = "0.10"
strum         = "0.26.2"
strum_macros  = "0.26.4"
thiserror     = "1.0.60"
uuid          = { version = "1", features = ["v4"] }
# reqwest intentionally removed — not needed in SP1 guest

[target.'cfg(not(target_family = "wasm"))'.dependencies]
zstd = { version = "0.12", optional = true }

[dev-dependencies]
criterion   = { version = "0.5", features = ["html_reports"] }
rand_pcg    = "0.3"
rand_seeder = "0.2"
tuple-map   = "0.4.0"
rsa         = "0.9"

[features]
compression = ["zstd"]
in_nodejs   = []
fuzzing     = []
