[package]
name = "mina-p2p-messages"
version = "0.19.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ark-ff                            = { version = "0.5.0", features = ["parallel", "asm", "std"] }
ark-serialize                     = { version = "0.5.0", features = ["std"] }
base64                            = "0.22"
binprot                           = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
binprot_derive                    = { git = "https://github.com/openmina/binprot-rs", rev = "400b52c" }
blake2                            = "0.10"
bs58                              = { version = "0.4.0", features = ["check"] }
derive_more                       = "0.99.17"
graphannis-malloc_size_of         = { git = "https://github.com/openmina/graphannis-malloc_size_of.git", rev = "f7da9f6" }
graphannis-malloc_size_of_derive  = { git = "https://github.com/openmina/graphannis-malloc_size_of_derive.git" }
hex                               = "0.4.3"
lazy_static                       = "1.4.0"
mina-curves                       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-hasher                       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-macros                       = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-signer                       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
num-bigint                        = { git = "https://github.com/openmina/num-bigint", branch = "rebase-onstack" }
o1-utils                          = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
poseidon                          = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
rsexp                             = "0.2.3"
rsexp-derive                      = "0.2.3"
serde                             = { version = "1", features = ["derive", "rc"] }
serde_bytes                       = "0.11"
serde_json                        = "1.0.107"
sha2                              = "0.10"
strum                             = "0.26.2"
strum_macros                      = "0.26.4"
thiserror                         = "1.0.60"
time                              = { version = "0.3.36", features = ["formatting", "macros", "parsing"] }

[dev-dependencies]
anyhow      = "1.0.81"
toml        = "0.5.9"
clap        = { version = "4.5", features = ["derive"] }
time        = { version = "0.3.36", features = ["formatting"] }
