[package]
name = "mina-vrf"
version = "0.19.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow            = "1.0.81"
ark-ec            = { version = "0.5.0" }
ark-ff            = { version = "0.5.0", features = ["parallel", "asm", "std"] }
ark-serialize     = { version = "0.5.0", features = ["std"] }
hex               = "0.4.3"
ledger            = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0", package = "mina-tree" }
mina-curves       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-hasher       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
mina-node-account = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-p2p-messages = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
mina-signer       = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
num               = { version = "0.4", features = ["std"] }
o1-utils          = { git = "https://github.com/o1-labs/proof-systems", tag = "0.2.0" }
poseidon          = { git = "https://github.com/o1-labs/mina-rust", tag = "v0.19.0" }
redux             = { path = "../redux" }
serde             = { version = "1", features = ["derive", "rc"] }
serde_json        = { version = "1.0.107", features = ["unbounded_depth", "arbitrary_precision"] }
thiserror         = "1.0.60"
bs58              = "0.4.0"
itertools         = "0.12"
rand              = "0.8"
sha2              = "0.10"
