[package]
name = "redux"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
paste = "1.0"
serde       = { version = "1", features = ["derive"], optional = true }
serde_json  = { version = "1.0", optional = true }
linkme      = { version = "0.3.22", optional = true }

[features]
default = []
serde   = ["dep:serde", "dep:serde_json"]
serializable_callbacks = ["linkme"]
openapi = []
fuzzing = []
