[package]
name    = "generate-srs"
version = "0.1.0"
edition = "2021"

[dependencies]
ledger          = { workspace = true }
mina-curves     = { workspace = true }
poly-commitment = { workspace = true }
ark-poly        = { workspace = true }
bincode         = { workspace = true }
mina-p2p-messages = { workspace = true }
rkyv = { workspace = true }
ark-serialize = { workspace = true }
zeko_sp1_lib      = { path = "../../lib" }